Update package.json to add convert-audio script and modify AudioService to require audio assets

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "setup-audio": "node scripts/setup-audio.js"
+    "setup-audio": "node scripts/setup-audio.js",
+    "convert-audio": "node scripts/convert-audio.js"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
