--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "setup-audio": "node scripts/setup-audio.js",
-    "convert-audio": "node scripts/convert-audio.js"
+    "convert-audio": "node scripts/convert-audio.js",
+    "optimize-audio": "node scripts/optimize-audio.js"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
